name:                   xbee
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               XBee API protocol
description:            XBee API protocol parser and connection interface

Library
  ghc-options:          -Wall
  hs-source-dirs:       src
  exposed-modules:      Network.Protocol.XBee
                        Network.Protocol.XBee.Common.Frame
                        Network.Protocol.XBee.Common.Envelope
                        Network.Protocol.XBee.Common.Escape
                        Network.Protocol.XBee.Series1
                        Network.Protocol.XBee.Series1.Addr
                        Network.Protocol.XBee.Series1.Frame.ATCmd
                        Network.Protocol.XBee.Series1.Frame.ATResponse
                        Network.Protocol.XBee.Series1.Frame.ModemStatus
                        Network.Protocol.XBee.Series1.Frame.Rx
                        Network.Protocol.XBee.Series1.Frame.Tx
                        Network.Protocol.XBee.Series1.Frame.TxStat
                        Network.Protocol.XBee.Series2
                        Network.Protocol.XBee.Series2.Frame.Rx
                        Network.Protocol.XBee.Series2.Frame.Tx
                        Network.Protocol.XBee.Series2.Frame.TxStat
  build-depends:        base >= 3 && < 5,
                        bytestring,
                        cereal,
                        stm
